2004-07-24  Steve Lhomme  <steve.lhomme@free.fr>

	* win32/gst.sln:
	* gst-libs/gst/gst-libs.def:
	* gst-libs/gst/gst-libs.vcproj:
	* gst/matroska/matroska.def:
	* gst/matroska/matroska.vcproj:
    Add the preliminary canvas to build plugins on Win32

2004-07-23  Benjamin Otte  <otte@gnome.org>

	* gst/audioconvert/gstaudioconvert.c: (gst_audio_convert_link):
	  don't enfore negotiation from source side, it breaks 
	  sinesrc ! audioconvert ! osssink

2004-07-22  David Schleef  <ds@schleef.org>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init): Add typefind
	for ELF files, since they can easily be recognized as audio/mpeg.
	(bug #147441)

2004-07-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/videoscale/videoscale.c: (gst_videoscale_setup),
	(gst_videoscale_planar411), (gst_videoscale_scale_nearest_32bit),
	(gst_videoscale_scale_nearest_24bit),
	(gst_videoscale_scale_nearest_16bit):
	  fix 16bit and 24bit for stride (24bit might need testing)
	  don't pretend we do more than one algorithm

2004-07-22  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* configure.ac:
	* gst/Makefile.am:
	* gst/multifilesink/Makefile.am:
	* gst/multifilesink/gstmultifilesink.c:
	(gst_multifilesink_get_formats),
	(gst_multifilesink_get_query_types), (_do_init),
	(gst_multifilesink_base_init), (gst_multifilesink_class_init),
	(gst_multifilesink_init), (gst_multifilesink_dispose),
	(gst_multifilesink_set_location), (gst_multifilesink_set_property),
	(gst_multifilesink_get_property), (gst_multifilesink_open_file),
	(gst_multifilesink_close_file), (gst_multifilesink_next_file),
	(gst_multifilesink_pad_query), (gst_multifilesink_handle_event),
	(gst_multifilesink_chain), (gst_multifilesink_change_state),
	(gst_multifilesink_uri_get_type),
	(gst_multifilesink_uri_get_protocols),
	(gst_multifilesink_uri_get_uri), (gst_multifilesink_uri_set_uri),
	(gst_multifilesink_uri_handler_init), (plugin_init):
	* gst/multifilesink/gstmultifilesink.h: